# capgineered-meta-xr-ai-agents-

./: Dockerfile  README.md  env_dev.txt  pyproject.toml
deployment/: remote.py
deployment/mcp-toolbox/: tools.yaml  tools_anomaly.yaml  tools_bq.yaml  tools_pg.yaml  tools_postgresql.yaml
eval/: evalset583047.evalset.json  evalset9bdf2a.evalset.json  machine_sensors_ai_agents_evalset583047_1750349348.205015.evalset_result.json  machine_sensors_ai_agents_evalset583047_1750349840.892821.evalset_result.json
machine_sensors_ai_agents/: agent.py
machine_sensors_ai_agents/.adk/eval_history/: machine_sensors_ai_agents_evalset583047_1750349389.1673093.evalset_result.json  machine_sensors_ai_agents_evalset9bdf2a_1750349172.7366936.evalset_result.json
machine_sensors_ai_agents/sub_agents/actuator/: agent.py
machine_sensors_ai_agents/sub_agents/anomaly_detection/: agent.py  prompt.py  tools.py
machine_sensors_ai_agents/sub_agents/basic_demo_agent/: __init__.py  agent.py  prompt.py  tools.py
machine_sensors_ai_agents/sub_agents/bigquery/: agent.py  prompt.py
machine_sensors_ai_agents/sub_agents/data_import/: agent.py  prompt.py  scripts.txt  tools.py
machine_sensors_ai_agents/sub_agents/data_ingestion/: agent.py  bigquery_scripts.txt  prompt.py  scripts.txt  tools.py
machine_sensors_ai_agents/sub_agents/decode_message/: agent.py  tools.py
machine_sensors_ai_agents/sub_agents/guidance/: agent.py  prompt.py  tools.py
machine_sensors_ai_agents/sub_agents/image_desc_generation/: agent.py  prompt.py  tools.py
machine_sensors_ai_agents/sub_agents/notification/: agent.py  prompt.py  tools.py  (+1 more)
rag/: README.md
rag/shared_libraries/: rag_agents_data.py
scripts/: deployment.txt  machine_telemetry.sql  raw_data.sql  realtime_sensor.txt
ui/cloud_run_fn/: main.py
ui/pubsub_app/: Dockerfile  README.md  pyproject.toml  requirements.txt  scripts.txt
ui/pubsub_app/pubsub/: main.py
ui/pubsub_app/test/: publish.py  remote_agent_tester.py
(+26 files in other folders)
